[PhucPLD - 2025/03/29] submit feedback customer

--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -20,4 +20,5 @@
     <ProjectReference Include="..\Ultility\Ultility.csproj" />
   </ItemGroup>
 
+    <Folder Include="wwwroot\img\feedbacks\" />
 </Project>
