[QuangVV - 2024-03-30] Update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,8 @@ obj/
 appsettings.Development.json
 appsettings.Local.json
 secrets.json
+appsettings.json
+
 
 # Dữ liệu tạm thời và thư mục build
 *.pid
